--- a/src/app/components/headers/welcome-header/welcome-header.component.scss
+++ b/src/app/components/headers/welcome-header/welcome-header.component.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-flow: row-reverse;
 
-  @media screen and (max-width: $md-device-width) {
+  @media screen and (max-width: $tablet-max-width) {
     flex-flow: column;
   }
 
@@ -16,7 +16,7 @@
     width: 426px;
     padding-right: 0;
 
-    @media screen and (max-width: $md-device-width) {
+    @media screen and (max-width: $tablet-max-width) {
       margin: 0 auto;
     }
 
@@ -30,7 +30,7 @@
     padding: 40px;
     text-align: left;
 
-    @media screen and (max-width: $md-device-width) {
+    @media screen and (max-width: $tablet-max-width) {
       margin: 0 auto;
       max-width: 800px;
       padding-left: 10px;
@@ -65,7 +65,7 @@
     padding-top: 100px;
     padding-left: 150px;
 
-    @media screen and (max-width: $md-device-width) {
+    @media screen and (max-width: $tablet-max-width) {
       padding-left: 0;
       padding-top: 40px;
     }
