--- a/src/app/styles/dimensions.scss
+++ b/src/app/styles/dimensions.scss
@@ -2,11 +2,11 @@ $header-height: 54px;
 
 $basic-border-header-height: 74px;
 
-$xs-device-width: 543px;
-$xs-device-width-upper: #{$xs-device-width + 1px};
-$sm-device-width: 767px;
-$sm-device-width-upper: #{$sm-device-width + 1px};
-$md-device-width: 991px;
-$md-device-width-upper: #{$md-device-width + 1px};
-$lg-device-width: 1199px;
-$lg-device-width-upper: #{$lg-device-width + 1px};
+$mobile-min-width: 0px;
+$mobile-max-width: 767px;
+$tablet-min-width: 768px;
+$tablet-max-width: 991px;
+$computer-small-min-width: 992px;
+$computer-small-max-width: 1200px;
+$computer-large-min-width: 1201px;
+$computer-large-max-width: 999999px;
