--- a/src/app/components/menus/navigation-menu/navigation-menu.component.scss
+++ b/src/app/components/menus/navigation-menu/navigation-menu.component.scss
@@ -2,6 +2,7 @@
 @import '../../../styles/dimensions';
 
 .navigation-menu-container {
+  margin-bottom: $header-height !important;
   background-color: $color-gray-25 !important;
   text-align: center;
   min-height: 100%;
