--- a/src/app/styles/typography.scss
+++ b/src/app/styles/typography.scss
@@ -91,12 +91,8 @@ $fs-xxxxl: 48px;
 }
 
 // font stacks
-$default-font-family:  'Open Sans', sans-serif;
-$header-font-family:   $museo;
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: $header-font-family;
-}
+$default-font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial,sans-serif;
+$header-font-family: 'museo','Helvetica Neue',Helvetica,Arial,sans-serif;
 
 h1 {
   font-size: 42px;
@@ -126,10 +122,6 @@ h5 {
 h6 {
   font-size: 14px;
   font-weight: 700;
-}
-
-p, div, span, a {
-  font-family: $default-font-family;
 }
 
 p {
